Added basic html

--- a/index.html
+++ b/index.html
@@ -4,11 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <script src="https://kit.fontawesome.com/e07b0355e5.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Rock, Paper, Scissors, Lizard, Spock</title>
 </head>
 <body>
+
+    <h1 class="heading">
+        Rock, Paper, Scissors, Lizard, Spock
+    </h1>
+
+    <div class="game">
+        <button class="btn btn--big btn--rock">
+            <i class="fa-solid fa-hand-back-fist"></i>
+        </button>
+        <button class="btn btn--big btn--paper">
+            <i class="fa-solid fa-hand"></i>
+        </button>
+        <button class="btn btn--big btn--scissors">
+            <i class="fa-solid fa-hand-scissors"></i>
+        </button>
+        <button class="btn btn--big btn--lizard">
+            <i class="fa-solid fa-hand-lizard"></i>
+        </button>
+        <button class="btn btn--big btn--spock">
+            <i class="fa-solid fa-hand-spock"></i>
+        </button>
+    </div>
+
+    <div class="score-area">
+        <h3 class="scores">Your Score: <span id="score">0</span></h3>
+        <h3 class="scores">Computer's Score: <span id="score">0</span></h3>
+    </div>
     
     <script src="assets/JavaScript/script.js"></script>
+    
 </body>
 </html>
