--- a/index.html
+++ b/index.html
@@ -16,26 +16,32 @@
     </h1>
 
     <div class="game">
-        <button class="btn btn--big btn--rock">
+        <button data-type="Rock"class="btn btn--big btn--rock">
             <i class="fa-solid fa-hand-back-fist"></i>
         </button>
-        <button class="btn btn--big btn--paper">
+        <button data-type="Paper"class="btn btn--big btn--paper">
             <i class="fa-solid fa-hand"></i>
         </button>
-        <button class="btn btn--big btn--scissors">
+        <button data-type="Scissors"class="btn btn--big btn--scissors">
             <i class="fa-solid fa-hand-scissors"></i>
         </button>
-        <button class="btn btn--big btn--lizard">
+        <button data-type="Lizard"class="btn btn--big btn--lizard">
             <i class="fa-solid fa-hand-lizard"></i>
         </button>
-        <button class="btn btn--big btn--spock">
+        <button data-type="Spock"class="btn btn--big btn--spock">
             <i class="fa-solid fa-hand-spock"></i>
         </button>
+    </div>
+
+    <div class="choice">
+        <h3 class="your-choice">Your choice: </h3>
+        <h3 class="computer-choice">Computer choice: </h3>
     </div>
 
     <div class="score-area">
         <h3 class="scores">Your Score: <span id="score">0</span></h3>
         <h3 class="scores">Computer's Score: <span id="score">0</span></h3>
+        <h2 class="result">Result: </h2>
     </div>
     
     <script src="assets/JavaScript/script.js"></script>
