button function working

--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
     </h1>
 
     <div class="game">
-        <button class="btn btn--big btn--rock">
+        <button id="buttons" class="btn btn--big btn--rock">
             <i class="fa-solid fa-hand-back-fist"></i>
         </button>
-        <button class="btn btn--big btn--paper">
+        <button id="buttons" class="btn btn--big btn--paper">
             <i class="fa-solid fa-hand"></i>
         </button>
-        <button class="btn btn--big btn--scissors">
+        <button id="buttons" class="btn btn--big btn--scissors">
             <i class="fa-solid fa-hand-scissors"></i>
         </button>
-        <button class="btn btn--big btn--lizard">
+        <button id="buttons" class="btn btn--big btn--lizard">
             <i class="fa-solid fa-hand-lizard"></i>
         </button>
-        <button class="btn btn--big btn--spock">
+        <button id="buttons" class="btn btn--big btn--spock">
             <i class="fa-solid fa-hand-spock"></i>
         </button>
     </div>
