--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </h1>
 
     <div class="game">
-        <button id="buttons" class="btn btn--big btn--rock">
+        <button id="buttons" onclick="selectChoice(this.id);" class="btn btn--big btn--rock">
             <i class="fa-solid fa-hand-back-fist"></i>
         </button>
         <button id="buttons" class="btn btn--big btn--paper">
