start adding style

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button id="buttons" onclick="selectChoice(this.id);" class="btn btn--big btn--rock">
             <i class="fa-solid fa-hand-back-fist"></i>
         </button>
-        <button id="buttons" class="btn btn--big btn--paper">
+        <button id="buttons" onclick="selectChoices(this.id);" class="btn btn--big btn--paper">
             <i class="fa-solid fa-hand"></i>
         </button>
         <button id="buttons" class="btn btn--big btn--scissors">
